style.css
/*Style Shstyle*/


/*---------------Carousels-------------*/

.CarouselTitle{

    font-family: 'ARDarling';
}

.CarouselTitle h2{

    font-size: 35px;

}

.carousel-inner .carousel-item.active,
.carousel-inner .carousel-item-next,
.carousel-inner .carousel-item-prev {
  display: flex;
}

.carousel-inner .carousel-item-right.active,
.carousel-inner .carousel-item-next {
  transform: translateX(25%);
}

.carousel-inner .carousel-item-left.active, 
.carousel-inner .carousel-item-prev {
  transform: translateX(-25%);
}
  
.carousel-inner .carousel-item-right,
.carousel-inner .carousel-item-left{ 
  transform: translateX(0);
  
}


/*Navigation*/

.w3-container{

    width: 100%;
    height: 10%;
    padding: 1.8%;
    background-color: #eee
}

.media{

    padding-top: 10px;
}

.media-body{

    text-align: center;
}

.dropdown-menu{

    background-color: #e9ecef;
}

.navbar{

    padding-top: 0;
}

.navbar-nav{

    font-size: 15px;
}

.navbar-expand-lg .navbar-nav .dropdown-menu{

    position:none;
}

.nav-link{

    color: black;
}

.nav-link .hover{

    color: blue;
}
.mr-3, .mx-3 {

    position: absolute;
    z-index: 2;
}
.ml-3, .mx-3 {
    
    position: relative;
    z-index: 2;
}

/*--------------------------------- Index ------------------------------------*/

/*Content*/

/*.Content{

    height: 100%;
}*/

/*.Greeting-Pic{
    
    position: fixed;
    z-index: 0;
}*/
.Greeting-Pic{

    /* The image used */
    background-image: url("images/Tony.jpeg");
  
    /* Set a specific height */
    min-height: 685px; 
  
    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.JuryRigText{

    position: absolute;
    float: right;
    z-index: 5;
    font-family: ARDarling;
    padding-top: 80px;
    padding-left: 650px;
    font-size: 170px;
    /*color: white;*/
    -webkit-text-stroke-color: black;
    -webkit-text-stroke: 2px;
    -webkit-text-fill-color: white;
}

.Covid{

    text-align: center;
    align-content: center;
    background-color: black;
    /*background-image: url("images/mask.jpg");*/
    height: 180px;
    width: auto;
    color: white;    
}

.CovidUpdate{

    justify-content: center;
    padding-top: 2%;
    padding-bottom: 1%;
    font-family: ARDarling;
}

.CovidUpdate h3{

    font-size: 55px;
}

.CovidStatement{

    font-size: 12px;
}

.PhotographyCarousel{

    height: auto;
    background-color: lightgray;
}

.PhotographyCarouselDesc{

    padding-top: 5px;
    padding-left: 20px;
    position: absolute;
}

.PhotographyCarouselDesc h3{

    font-size: 30px;
}

.carousel-inner > .item > img {
    margin: 0 auto;
}

.carousel{

    padding-top: 35px;
    padding-bottom: 20px;
}

@font-face {
        
    font-family: ARDarling;
    src: url(ar-darling.ttf);
}

.QuickViews{

    width: 100%;
    /*height: 400px;*/
    text-align: center;
    padding-top: 25px;
    padding-bottom: 25px;
}

.QuickViewTitle{

    font-family: 'ARDarling';
    padding-bottom: 15px;
}

.QuickViewTitle h2{

    font-size: 35px;
}

.index_cards{

    width: auto;
    display: inline-block;
    padding: 10px;
}

.index_img{

    width: 300px;
}


/*-----------About Us ----------------*/
.CommitmentStatement{
    
    text-align: center;
    padding: 15px;
    background-color: black;
    color: white;
}

.CommitmentHeader h2{

    font-size: 45px;
    font-family: 'ARDarling';
    padding: 10px;    
}

.CommitmentText{

    font-size: 12px;
}

/*----------Photography CSS---------*/



.Weddings{

    font-size: 500px;
    color: red;
}


/*-----------------------------Footer-----------------------------*/

.Footer{

    position: relative;
    bottom:0;
}
.footer{

    position: relative;
    bottom: 0;
    width: 100%;
    height: 125px;
    text-align: center;
    background-color: #eee

}

.footer-left{

    width: 250px;
    position: absolute;
    padding-top: 70px;
    z-index: 0;
}

.footer-copyright{

    font-size: 20px;
    letter-spacing: .5px;
}

.footer-allrights{

    font-size: 10px;
}

.footer-middle{

    position: absolute;
    width: 100%;
    padding-top: 25px;
    z-index: 1;
}

.footer-contact{

    padding-top: 0;
    padding-bottom: 0;
    font-size: 25px;
    text-decoration: underline;
    letter-spacing: 2px;
}

.footer-contact .h3{

    font-size: 25px;
}

.footer-email{

    font-size: 20px;
    letter-spacing: .5px;
}

.footer-email a{

    color: black;
}

.footer-email a:hover{

    color: blue;
}

.footer-right{

    float: right;
    padding: 5%;
    padding-top: 10px;
    z-index: 2;
}

.footer-follow{

    font-size: 25px;
    text-decoration: underline;
    letter-spacing: 1px;
}



/*---------------Mobile----------*/


@media (max-width: 800px) {

    .navbar-toggler-icon{

        height: 10px;
    }

    .burger{

        height: auto;
        justify-content: center;
    }

    .navbar-toggler{
        
        height: auto;
        width: auto;
    }

    .navbar-nav{

        background-color:#eee;
        border-radius: 10px;
        float: none;
        width: auto;
        margin: auto;
        margin-top: 15px;
    }

    .nav-link{

        position: center;
        text-align: center;
    }

    .dropdown-menu{

        padding: 0;
    }

    .dropdown-item{

        text-align: center;
        padding: 0;
    }

    .line{

        background: black;
        height: 2px;
        width: 35px;
        margin: 5px;
        justify-content: center;
    }

    .SocialMediaLogos{

        height: 25px;
        display: flex;
    }

    .w3-container{

        width: 100%;
        height: 15%;
        margin: 0;
    }

    .align-self-center{

        height: 50px;
    }

    .JuryRigText{

        width: 100%;
    }

    .Greeting-Pic{

        width: 100%;
    }

    .footer-left{

        width: 150px;
        padding-top: 85px;
    }

    .footer-copyright{

        font-size: 11px;
    }

    .footer-allrights{

        font-size: 9px;
    }

    .footer-middle{

        padding-top: 2px;
    }

    .footer-contact h3{

        font-size: 23;
        margin-bottom: 0;
    }

    .footer-email{

        font-size: 15px;
        letter-spacing: 1px;
    }

    .footer-right{

        padding-top: 60px;
    }

    .footer-follow h3{

        font-size: 20px;
        margin-bottom: 2px;
    }

    .footer-SocialMediaLogos{

        height: 25px;
    }

}
  

